--- a/FrontEnd/src/app/components/education/edit-education.component.html
+++ b/FrontEnd/src/app/components/education/edit-education.component.html
@@ -18,15 +18,16 @@
                     <label for="cargoE">Imagen</label>
                     <input type="text" class="form-control" id="cargoE" name="cargoE" [(ngModel)]="cargoE" required>
                 </div> -->
-                <!-- <div class="form-group">
+                <div class="form-group">
                     <label for="fechaInicioE">Fecha inicio</label>
                     <input type="text" class="form-control" id="fechaInicioE" name="fechaInicioE"
-                        [(ngModel)]="fechaInicioE" required>
+                        [(ngModel)]="education.fechaInicioE" required>
                 </div>
                 <div class="form-group">
                     <label for="fechaFinE">Fecha fin</label>
-                    <input type="text" class="form-control" id="fechaFinE" name="fechaFinE" [(ngModel)]="fechaFinE">
-                </div> -->
+                    <input type="text" class="form-control" id="fechaFinE" name="fechaFinE"
+                        [(ngModel)]="education.fechaFinE">
+                </div>
                 <div class="button-container">
                     <button class="btn btn-primary">Editar educacion</button>
                 </div>
