--- a/FrontEnd/src/app/components/education/new-education.component.html
+++ b/FrontEnd/src/app/components/education/new-education.component.html
@@ -12,12 +12,11 @@
                     <label for="nombreE">Titulacion</label>
                     <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
                 </div>
-
                 <!-- <div class="form-group">
                     <label for="cargoE">Imagen</label>
                     <input type="text" class="form-control" id="cargoE" name="cargoE" [(ngModel)]="cargoE" required>
                 </div> -->
-                <!-- <div class="form-group">
+                <div class="form-group">
                     <label for="fechaInicioE">Fecha inicio</label>
                     <input type="text" class="form-control" id="fechaInicioE" name="fechaInicioE"
                         [(ngModel)]="fechaInicioE" required>
@@ -25,7 +24,7 @@
                 <div class="form-group">
                     <label for="fechaFinE">Fecha fin</label>
                     <input type="text" class="form-control" id="fechaFinE" name="fechaFinE" [(ngModel)]="fechaFinE">
-                </div> -->
+                </div>
                 <div class="button-container">
                     <button class="btn btn-primary">Agregar educacion</button>
                 </div>
