--- a/FrontEnd/src/app/components/services/new-service.component.html
+++ b/FrontEnd/src/app/components/services/new-service.component.html
@@ -10,10 +10,10 @@
                 <input type="text" class="form-control" id="descripcionS" name="descripcionS" [(ngModel)]="descripcionS"
                     required>
             </div>
-            <!-- <div class="form-group">
-                    <label for="cargoE">Imagen</label>
-                    <input type="text" class="form-control" id="cargoE" name="cargoE" [(ngModel)]="cargoE" required>
-                </div> -->
+            <div class="form-group">
+                <label for="imageS">Icon font</label>
+                <input type="text" class="form-control" id="imageS" name="imageS" [(ngModel)]="imageS">
+            </div>
             <div class="button-container">
                 <button class="btn btn-primary">Agregar servicio</button>
             </div>
