--- a/FrontEnd/src/app/components/services/edit-service.component.html
+++ b/FrontEnd/src/app/components/services/edit-service.component.html
@@ -11,10 +11,10 @@
                 <input type="text" class="form-control" id="descripcionS" name="descripcionS"
                     [(ngModel)]="servicio.descripcionS" required>
             </div>
-            <!-- <div class="form-group">
-                    <label for="cargoE">Imagen</label>
-                    <input type="text" class="form-control" id="cargoE" name="cargoE" [(ngModel)]="cargoE" required>
-                </div> -->
+            <div class="form-group">
+                <label for="imageS">Icon font</label>
+                <input type="text" class="form-control" id="imageS" name="imageS" [(ngModel)]="servicio.imageS">
+            </div>
             <div class="button-container">
                 <button class="btn btn-primary">Editar servicio</button>
             </div>
