--- a/FrontEnd/src/app/components/projets/projets.component.html
+++ b/FrontEnd/src/app/components/projets/projets.component.html
@@ -1,26 +1,35 @@
 <section class="projets">
     <div class="projets_text">
         <span>PORTFOLIO</span>
-        <h3 class="tittle">My projects</h3>
+        <h3 class="tittle">My projects<a routerLink="/nuevoproyecto" *ngIf="isLogged">
+                <i class="fa-solid fa-circle-plus"></i></a>
+        </h3>
         <p>
             Here you can see some of my personal projects that I have developed with different technologies and uses.
         </p>
     </div>
     <div class="projets_grid">
         <div class="container_projects">
-            <ng-container *ngFor="let projet of projetsList">
+            <ng-container *ngFor="let Proyecto of proyecto">
                 <div class="projets_card">
-                    <span class="projet_date">{{projet.date}}</span>
-                    <img [src]="projet.img" alt="project one">
-                    <div class="projets_card_text">
-                        <h4>{{projet.tittle}}</h4>
+                    <a (click)="delete(Proyecto.id)" *ngIf="isLogged">
+                        <i class="fa-solid fa-trash-can"></i>
+                    </a>
+                    <span class="projet_date">{{Proyecto.fechaInicioP}}</span>
+                    <!-- <img [src]="{{Proyecto.imageP}}" alt="project"> -->
+                    <img src="../../../assets/resources/takepro.jpg" alt="">
+                    <div class=" projets_card_text">
+                        <h4>{{Proyecto.nombreP}}</h4>
                         <p>
-                            {{projet.description}}
+                            {{Proyecto.descripcionP}}
                         </p>
-                        <a [href]="projet.url"><span>See More ></span></a>
+                        <a href="{{Proyecto.enlaceP}}"><span>See More ></span></a>
                     </div>
+                    <a routerLink="/editproyecto/{{Proyecto.id}}" *ngIf="isLogged">
+                        <i class="fa-regular fa-pen-to-square"></i>
+                    </a>
                 </div>
             </ng-container>
         </div>
-    </div>        
+    </div>
 </section>
