--- a/FrontEnd/src/app/components/experience/new-experience.component.html
+++ b/FrontEnd/src/app/components/experience/new-experience.component.html
@@ -25,7 +25,7 @@
                     <input type="text" class="form-control" id="fechaFinE" name="fechaFinE" [(ngModel)]="fechaFinE">
                 </div>
                 <div class="button-container">
-                    <button class="btn btn-primary">add experience</button>
+                    <button class="btn btn-primary">Agregar experiencia</button>
                 </div>
             </form>
         </div>
