--- a/FrontEnd/src/app/components/projets/projets.component.html
+++ b/FrontEnd/src/app/components/projets/projets.component.html
@@ -1,7 +1,7 @@
 <section class="projets">
     <div class="projets_text">
         <span>PORTFOLIO</span>
-        <h3 class="tittle">My projects<a routerLink="/nuevoproyecto" *ngIf="isLogged">
+        <h3 class="tittle" id="sec2">My projects<a routerLink="/nuevoproyecto" *ngIf="isLogged">
                 <i class="fa-solid fa-circle-plus"></i></a>
         </h3>
         <p>
