--- a/FrontEnd/src/app/components/skills/new-skill.component.html
+++ b/FrontEnd/src/app/components/skills/new-skill.component.html
@@ -8,6 +8,16 @@
                         required>
                 </div>
                 <div class="form-group">
+                    <label for="typeSk">Tipo Skill</label> <select class="form-select" id="typeSk" name="typeSk"
+                        [(ngModel)]="typeSk" required>
+                        <option selected>Tipo skill</option>
+                        <option value="Tools">Tools</option>
+                        <option value="Frontend">Frontend</option>
+                        <option value="Backend">Backend</option>
+                        <option value="Database">Database</option>
+                    </select>
+                </div>
+                <div class="form-group">
                     <label for="procentajeSk">Porcentaje</label>
                     <input type="number" class="form-control" id="procentajeSk" name="procentajeSk"
                         [(ngModel)]="porcentajeSk" required>
