--- a/FrontEnd/src/app/components/skills/skills.component.html
+++ b/FrontEnd/src/app/components/skills/skills.component.html
@@ -11,8 +11,8 @@
     <div class="skillContainer">
         <div class="colum">
             <h2>Tools</h2>
-            <div *ngFor="let Skill of skill">
-                <ng-container *ngIf="Skill.nombreSk === 'tools'">
+            <ng-container *ngFor="let Skill of skill">
+                <ng-container *ngIf="Skill.typeSk === 'Tools'">
                     <div class="progressCircle" style="--porcentaje: {{Skill.porcentajeSk * 3.1}}">
                         <img src="../../../assets/resources/postmanLogo.png" alt="">
                         <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
@@ -25,161 +25,99 @@
                             <circle cx="50%" cy="50%" r="50" pathlength="100" />
                             <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
                         </svg>
+                        <div class="iconsSkill">
+                            <a routerLink="/editskill/{{Skill.id}}" *ngIf="isLogged">
+                                <i class="fa-regular fa-pen-to-square"></i>
+                            </a>
+                            <a (click)="delete(Skill.id)" *ngIf="isLogged">
+                                <i class="fa-solid fa-trash-can"></i>
+                            </a>
+                        </div>
                     </div>
                 </ng-container>
-            </div>
-            <!-- <div class="progressCircle" style="--porcentaje: 77">
-                <img src="../../../assets/resources/postmanLogo.png" alt="">
-                <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                    <defs>
-                        <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
-                            <stop offset="0%" stop-color="#259ab4" />
-                            <stop offset="100%" stop-color="#424c51" />
-                        </linearGradient>
-                    </defs>
-                    <circle cx="50%" cy="50%" r="50" pathlength="100" />
-                    <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
-                </svg>
-            </div>
-            <div class="progressCircle" style="--porcentaje: 248">
-                <img src="../../../assets/resources/postmanLogo.png" alt="">
-                <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                    <defs>
-                        <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
-                            <stop offset="0%" stop-color="#259ab4" />
-                            <stop offset="100%" stop-color="#424c51" />
-                        </linearGradient>
-                    </defs>
-                    <circle cx="50%" cy="50%" r="50" pathlength="100" />
-                    <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
-                </svg>
-            </div> -->
+            </ng-container>
         </div>
         <div class="colum">
             <h2>Frontend</h2>
-            <div class="frontContainer">
-                <div class="progressCircle" style="--porcentaje: 155">
-                    <img src="../../../assets/resources/postmanLogo.png" alt="">
-                    <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                        <defs>
-                            <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
-                                <stop offset="0%" stop-color="#259ab4" />
-                                <stop offset="100%" stop-color="#424c51" />
-                            </linearGradient>
-                        </defs>
-                        <circle cx="50%" cy="50%" r="50" pathlength="100" />
-                        <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
-                    </svg>
-                </div>
-                <div class="progressCircle" style="--porcentaje: 155">
-                    <img src="../../../assets/resources/postmanLogo.png" alt="">
-                    <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                        <defs>
-                            <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
-                                <stop offset="0%" stop-color="#259ab4" />
-                                <stop offset="100%" stop-color="#424c51" />
-                            </linearGradient>
-                        </defs>
-                        <circle cx="50%" cy="50%" r="50" pathlength="100" />
-                        <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
-                    </svg>
-                </div>
-                <div class="progressCircle" style="--porcentaje: 155">
-                    <img src="../../../assets/resources/postmanLogo.png" alt="">
-                    <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                        <defs>
-                            <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
-                                <stop offset="0%" stop-color="#259ab4" />
-                                <stop offset="100%" stop-color="#424c51" />
-                            </linearGradient>
-                        </defs>
-                        <circle cx="50%" cy="50%" r="50" pathlength="100" />
-                        <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
-                    </svg>
-                </div>
-                <div class="progressCircle" style="--porcentaje: 155">
-                    <img src="../../../assets/resources/postmanLogo.png" alt="">
-                    <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                        <defs>
-                            <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
-                                <stop offset="0%" stop-color="#259ab4" />
-                                <stop offset="100%" stop-color="#424c51" />
-                            </linearGradient>
-                        </defs>
-                        <circle cx="50%" cy="50%" r="50" pathlength="100" />
-                        <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
-                    </svg>
-                </div>
-                <div class="progressCircle" style="--porcentaje: 155">
-                    <img src="../../../assets/resources/postmanLogo.png" alt="">
-                    <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                        <defs>
-                            <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
-                                <stop offset="0%" stop-color="#259ab4" />
-                                <stop offset="100%" stop-color="#424c51" />
-                            </linearGradient>
-                        </defs>
-                        <circle cx="50%" cy="50%" r="50" pathlength="100" />
-                        <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
-                    </svg>
-                </div>
-                <div class="progressCircle" style="--porcentaje: 155">
-                    <img src="../../../assets/resources/postmanLogo.png" alt="">
-                    <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                        <defs>
-                            <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
-                                <stop offset="0%" stop-color="#259ab4" />
-                                <stop offset="100%" stop-color="#424c51" />
-                            </linearGradient>
-                        </defs>
-                        <circle cx="50%" cy="50%" r="50" pathlength="100" />
-                        <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
-                    </svg>
-                </div>
-            </div>
+            <ng-container *ngFor="let Skill of skill">
+                <ng-container *ngIf="Skill.typeSk === 'Frontend'">
+                    <div class="progressCircle" style="--porcentaje: {{Skill.porcentajeSk * 3.1}}">
+                        <img src="../../../assets/resources/postmanLogo.png" alt="">
+                        <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
+                            <defs>
+                                <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
+                                    <stop offset="0%" stop-color="#259ab4" />
+                                    <stop offset="100%" stop-color="#424c51" />
+                                </linearGradient>
+                            </defs>
+                            <circle cx="50%" cy="50%" r="50" pathlength="100" />
+                            <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
+                        </svg>
+                        <div class="iconsSkill">
+                            <a routerLink="/editskill/{{Skill.id}}" *ngIf="isLogged">
+                                <i class="fa-regular fa-pen-to-square"></i>
+                            </a>
+                            <a (click)="delete(Skill.id)" *ngIf="isLogged">
+                                <i class="fa-solid fa-trash-can"></i>
+                            </a>
+                        </div>
+                    </div>
+                </ng-container>
+            </ng-container>
         </div>
         <div class="colum">
             <h2>Backend</h2>
-            <div class="progressCircle" style="--porcentaje: 248">
-                <img src="../../../assets/resources/postmanLogo.png" alt="">
-                <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                    <defs>
-                        <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
-                            <stop offset="0%" stop-color="#259ab4" />
-                            <stop offset="100%" stop-color="#424c51" />
-                        </linearGradient>
-                    </defs>
-                    <circle cx="50%" cy="50%" r="50" pathlength="100" />
-                    <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
-                </svg>
-            </div>
-            <div class="progressCircle" style="--porcentaje: 248">
-                <img src="../../../assets/resources/postmanLogo.png" alt="">
-                <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                    <defs>
-                        <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
-                            <stop offset="0%" stop-color="#259ab4" />
-                            <stop offset="100%" stop-color="#424c51" />
-                        </linearGradient>
-                    </defs>
-                    <circle cx="50%" cy="50%" r="50" pathlength="100" />
-                    <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
-                </svg>
-            </div>
-            <h2>DataBase</h2>
-            <div class="progressCircle" style="--porcentaje: 248">
-                <img src="../../../assets/resources/postmanLogo.png" alt="">
-                <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                    <defs>
-                        <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
-                            <stop offset="0%" stop-color="#259ab4" />
-                            <stop offset="100%" stop-color="#424c51" />
-                        </linearGradient>
-                    </defs>
-                    <circle cx="50%" cy="50%" r="50" pathlength="100" />
-                    <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
-                </svg>
-            </div>
+            <ng-container *ngFor="let Skill of skill">
+                <ng-container *ngIf="Skill.typeSk === 'Backend'">
+                    <div class="progressCircle" style="--porcentaje: {{Skill.porcentajeSk * 3.1}}">
+                        <img src="../../../assets/resources/postmanLogo.png" alt="">
+                        <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
+                            <defs>
+                                <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
+                                    <stop offset="0%" stop-color="#259ab4" />
+                                    <stop offset="100%" stop-color="#424c51" />
+                                </linearGradient>
+                            </defs>
+                            <circle cx="50%" cy="50%" r="50" pathlength="100" />
+                            <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
+                        </svg>
+                        <div class="iconsSkill">
+                            <a routerLink="/editskill/{{Skill.id}}" *ngIf="isLogged">
+                                <i class="fa-regular fa-pen-to-square"></i>
+                            </a>
+                            <a (click)="delete(Skill.id)" *ngIf="isLogged">
+                                <i class="fa-solid fa-trash-can"></i>
+                            </a>
+                        </div>
+                    </div>
+                </ng-container>
+            </ng-container>
+            <h2>Database</h2>
+            <ng-container *ngFor="let Skill of skill">
+                <ng-container *ngIf="Skill.typeSk === 'Database'">
+                    <div class="progressCircle" style="--porcentaje: {{Skill.porcentajeSk * 3.1}}">
+                        <img src="../../../assets/resources/postmanLogo.png" alt="">
+                        <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
+                            <defs>
+                                <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
+                                    <stop offset="0%" stop-color="#259ab4" />
+                                    <stop offset="100%" stop-color="#424c51" />
+                                </linearGradient>
+                            </defs>
+                            <circle cx="50%" cy="50%" r="50" pathlength="100" />
+                            <circle class="progress" cx="50%" cy="50%" r="50" pathlength="100" />
+                        </svg>
+                        <div class="iconsSkill">
+                            <a routerLink="/editskill/{{Skill.id}}" *ngIf="isLogged">
+                                <i class="fa-regular fa-pen-to-square"></i>
+                            </a>
+                            <a (click)="delete(Skill.id)" *ngIf="isLogged">
+                                <i class="fa-solid fa-trash-can"></i>
+                            </a>
+                        </div>
+                    </div>
+                </ng-container>
+            </ng-container>
         </div>
     </div>
 </section>
