--- a/FrontEnd/src/app/components/landing/landing.component.html
+++ b/FrontEnd/src/app/components/landing/landing.component.html
@@ -1,21 +1,29 @@
 <section class="containerLanding">
     <div class="about">
-        <div class="about_stack"><h2>{{persona.posicion}}</h2></div> 
-        <div class="about_nombre"><h1>{{persona.nombre}} {{persona.apellido}}</h1></div>
+        <div class="about_stack">
+            <h2>{{persona?.posicion}}</h2>
+        </div>
+        <div class="about_nombre">
+            <h1>{{persona?.nombre}} {{persona?.apellido}}</h1>
+        </div>
         <div class="about_bar"></div>
         <div class="about_text">
             <p>
-                {{persona.sobreMi}} <a download="CV_Ivan_Litt" href="/assets/resources/download/CV_IvanLitt(ES).pdf">here</a>.
+                {{persona?.sobreMi}} <a download="CV_Ivan_Litt"
+                    href="/assets/resources/download/CV_IvanLitt(ES).pdf">here</a>.
             </p>
         </div>
         <div class="about_locate">
-            <i class="fa-solid fa-street-view"></i><span> {{persona.ubicacion}}</span>
-        </div>        
+            <i class="fa-solid fa-street-view"></i><span> {{persona?.ubicacion}}</span>
+            <a routerLink="/editpersona/{{persona?.id}}" *ngIf="isLogged">
+                <i class="fa-regular fa-pen-to-square"></i>
+            </a>
+        </div>
     </div>
     <img class="miguel" src="/assets/resources/miguelPng.png" alt="LandingImg">
     <div class="contact">
         <a href="mailto:ivanlitt805@gmail.com">
             <h4>GET ON TOUCH</h4>
-        </a> 
+        </a>
     </div>
-</section> 
+</section>
