--- a/FrontEnd/src/app/components/navbar/navbar.component.css
+++ b/FrontEnd/src/app/components/navbar/navbar.component.css
@@ -1,100 +1,120 @@
 /*---------------------------NavBar---------------------------*/
 
-.menu{
-    background-color: #212529;
-    color: white;
-    height: 64px;
-    font-weight: 500;
-    font-size: 18px;
-    position: fixed;
+.menu {
+  background-color: #212529;
+  color: white;
+  height: 64px;
+  font-weight: 500;
+  font-size: 18px;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+}
+
+.menu_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  height: 100%;
+}
+
+.menu_links {
+  display: flex;
+  height: 100%;
+  transition: transform 1.5s;
+  margin: 0px;
+}
+
+.menu_link {
+  text-decoration: none;
+  color: #9B9D97;
+}
+
+.menu_link:hover {
+  color: orangered;
+  transform: scale(1.08);
+  transition: .2s;
+}
+
+.menu_item {
+  list-style: none;
+  position: relative;
+  height: 100%;
+  color: white;
+  text-decoration: none;
+  padding: 0 30px;
+  display: flex;
+  align-items: center;
+}
+
+.menu_item i {
+  margin-right: 20px;
+}
+
+.menu_hamburguer {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  padding: 0 15px;
+  cursor: pointer;
+  display: none;
+}
+
+.menu_img {
+  display: block;
+  width: 36px;
+}
+
+.menu_logo img {
+  width: 184px;
+  margin-left: 10px;
+}
+
+@media screen and (max-width: 800px) {
+  .menu_hamburguer {
+    display: flex;
+  }
+
+  .menu_item {
+    overflow: hidden;
+  }
+
+  .menu_links {
+    position: absolute;
+    max-width: 300px;
+    width: 100%;
+    top: 64px;
+    bottom: 0;
+    right: 0;
+    overflow-y: auto;
+    display: grid;
+    grid-auto-rows: max-content;
+    margin: 0px;
+    height: 400px;
+    padding: 0px;
     z-index: 100;
+    background-color: #000000;
+    transform: translateX(100%);
+  }
+
+  .menu_links--show {
+    transform: unset;
     width: 100%;
   }
-  .menu_container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
-    max-width: 1200px;
-    margin: 0 auto;
-    height: 100%;
+
+  .menu_link {
+    padding: 25px 0;
+    padding-left: 30px;
+    height: auto;
   }
-  .menu_links{
-    display: flex;
-    height: 100%;
-    transition: transform 1.5s;
-    margin: 0px;
+}
+
+
+@media screen and (max-width: 580px) {
+  .menu {
+    display: fixed;
   }
-  .menu_link{
-    text-decoration: none;
-    color: #9B9D97;
-  }
-  .menu_link:hover {
-    color: orangered;
-    transform: scale(1.08);
-    transition: .2s;
-  }
-  .menu_item{
-    list-style: none;
-    position: relative;
-    height: 100%;
-    color: white;
-    text-decoration: none;
-    padding: 0 30px;
-    display: flex;
-    align-items: center;
-  }
-  .menu_item i{
-    margin-right: 20px;  
-  }
-  .menu_hamburguer{
-    display: flex;
-    height: 100%;
-    align-items: center;
-    padding: 0 15px;
-    cursor: pointer;
-    display: none;
-  }
-  .menu_img{
-    display: block;
-    width: 36px;
-  }
-  .menu_logo img{
-    width: 184px;
-    margin-left: 10px;
-  }
-  
-  @media screen and (max-width: 800px){
-    .menu_hamburguer{
-        display: flex;
-    }
-    .menu_item{
-        overflow: hidden;
-    }
-    .menu_links{
-        position: absolute;
-        max-width: 300px;
-        width: 100%;
-        top: 64px;
-        bottom: 0;
-        right: 0;
-        overflow-y: auto;
-        display: grid;
-        grid-auto-rows: max-content;
-        margin: 0px;
-        height: 400px;
-        padding: 0px ;
-        z-index: 100;
-        background-color: #000000;
-        transform: translateX(100%);
-    }
-    .menu_links--show{
-        transform: unset;
-        width: 100%;
-    }
-    .menu_link{
-        padding: 25px 0;
-        padding-left: 30px;
-        height: auto;
-    }
 }
