--- a/FrontEnd/src/app/components/skills/edit-skill.component.html
+++ b/FrontEnd/src/app/components/skills/edit-skill.component.html
@@ -24,8 +24,8 @@
                 </div>
                 <div class="form-group">
                     <label for="imageSk">Imagen</label>
-                    <input type="text" class="form-control" id="imageSk" name="imageSk" [(ngModel)]="skill.imageSk"
-                        required>
+                    <input type="file" class="form-control" id="imageSk" name="imageSk" [(ngModel)]="skill.imageSk"
+                        (change)="uploadImage($event)" accept=".jpg, .jpeg, .png">
                 </div>
                 <div class="button-container">
                     <button class="btn btn-primary">Editar Skill</button>
